k8s/home-assistant/resources/whisper.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisper-deployment
spec:
  template:
    spec:
      containers:
        - image: rhasspy/wyoming-whisper@sha256:792754e682e086ca4fb3ff8586a8b1d4800a67a94505e54a1c80c3dda4ad798d
          name: whisper
          args:
            - --model
            - tiny-int8
            - --language
            - en
          ports:
            - name: whisper
              containerPort: 10300

---
apiVersion: v1
kind: Service
metadata:
  name: whisper-service
spec:
  ports:
    - name: whisper
      port: 10300
      targetPort: whisper
