k8s/home-assistant/resources/home-assistant.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 0
  strategy:
    type: Recreate
  template:
    spec:
      hostNetwork: true
      containers:
        - image: ghcr.io/home-assistant/home-assistant:2025.1.3@sha256:fccef878024377273be5d2bb8cc7d63715dd8b255b36543d595eb867549f4a79
          name: home-assistant
          resources:
            requests:
              memory: 4G
            limits:
              memory: 5G
          ports:
            - name: web
              containerPort: 8123
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: config-map
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
              readOnly: true
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-volume
        - name: config-map
          configMap:
            name: config
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://home-assistant.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: home-assistant
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: home-assistant
    gethomepage.dev/name: Home Assistant
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy-web-service.auth.svc.cluster.local/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2-proxy.durbin.casa/oauth2/start
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email,X-Auth-Request-Preferred-Username
    external-dns.alpha.kubernetes.io/target: external.durbin.casa
spec:
  ingressClassName: external
  rules:
    - host: &host home-assistant.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
